--- a/src/Makefile
+++ b/src/Makefile
@@ -46,7 +46,7 @@ SRCS := \
 	dlload sys init task array dump staticdata toplevel jl_uv datatype \
 	simplevector runtime_intrinsics precompile jloptions \
 	threading partr stackwalk method \
-	gc gc-alloc gc-alloc-profiler gc-finalizers gc-mark gc-callbacks \
+	gc gc-alloc gc-alloc-profiler gc-callbacks gc-finalizers gc-mark gc-sweep \
 	gc-debug gc-pages gc-stacks \
 	jlapi signal-handling safepoint timing subtype rtutils \
 	crc32c APInt-C processor ircode opaque_closure codegen-stubs coverage runtime_ccall
